CR-94 [MARKET] Trending card /market fix meteor z-index

--- a/app/assets/styles/global.css
+++ b/app/assets/styles/global.css
@@ -32,7 +32,7 @@
     }
     
     .page {
-        @apply max-w-7xl mt-8 flex flex-col items-center justify-center z-10;
+        @apply max-w-7xl mt-8 flex flex-col items-center justify-center;
     }
     
     [data-slot='sidebar-wrapper'] {
